kubernetes/prod/adguard/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.68 # {"$imagepolicy": "flux-system:adguard"}
          args:
            - "--config"
            - "/opt/adguardhome/conf/AdGuardHome.yaml"
            - "--work-dir"
            - "/opt/adguardhome/work"
            - "--no-check-update"
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-home-config
          configMap:
            name: adguard-config
        - name: config
          persistentVolumeClaim:
            claimName: adguard-config-pvc
