kubernetes/prod/adguard/adguard/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.202.153
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  selector:
    app: adguard
