kubernetes/prod/adguard/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard
  name: adguard
  namespace: adguard
spec:
  ingressClassName: traefik
  rules:
  - host: adguard.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: adguard
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - adguard.nmoura.pt
    secretName: nmoura-pt-tls
